# Traditional_ML

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/set-version/: action.yaml
.github/workflows/: pr-check.yaml  python-docs.yaml  semver.yaml
Income_Prediction/Reports/: income_profile.html
Income_Prediction/data/income/income_clf/: Income Prediction.docx
Income_Prediction/notebooks/: Income_prediction_clf.ipynb
Income_Prediction/presentation/: Income Prediction Report.pptx
docs/: README.md
docs/Reports/: income_profile.html
tests/: test_placeholder.py
traditional_ML/: Income_prediction_clf.ipynb
