[tool.poetry]
name = "GenerativeAI-LLMs"
version = "0.0.0"
description = ""
authors = ["Nabarko"]

[tool.poetry.dependencies]
# This version must also be changed in the ruff config.
python = "~3.8"
jupyter = "^1.0.0"
pymdown-extensions = "^10.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-reportlog = "*"
pytest-mock = "*"
pre-commit = "*"
ruff = "^0.0.259"
black = "^23.1.0"
gitlint = "^0.19.1"
mypy = "^1.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = { version = "^1.3.0" }
mkdocs-material = { version = "^9.0.0" }
mkdocs-section-index = { version = "^0.3.4" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###################################
#
#              SETTINGS
#
###################################

[tool.black]
line-length = 120

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["D","E", "F","W","I001"]

ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Builtins

builtins=["__version__"]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
